--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Ethan Lapaczonek
 #logo:
+<a href="www.linkedin.com/in/ethan-lapaczonek-54366923a">View My LinkedIn Profile</a>
 theme: jekyll-theme-cayman
